tests/snapshots/examples_fixtures/patterns__match_identifier_binding_ok.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/match_identifier_binding_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/patterns/match_identifier_binding_ok.flx:7:5
  |
7 |     print(label);
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
